--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 				Diogo <span class="text-secondary">Barbosa</span>
 			</h1>
 			<h2 class="sm-heading">
-				Software Developer, Inventor & Computer Scientist
+				Software Developer & Computer Scientist
 			</h2>
 			<div class="social-icons">
 				<a href="https://www.facebook.com/dbarbosap">
