--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 				<img src="img/portrait.jpeg" alt="Diogo Barbosa" class="bio-image" />
 
 				<div class="bio">
-					<h3 class="text-secondary">Who I Am</h3>
+					<h3 class="text-secondary">Who Am I</h3>
 					<p>
 						I'm an enthusiast about almost everything. And everything around me
 						transforms into ideas in my head and ways to help people in their
@@ -82,7 +82,7 @@
 					<p>
 						YAY! Finally studying <strong>computer science</strong> at one of
 						the best in Portugal. Loving the course. Awesome teachers. Very
-						competitive. I love it!
+						challenging. I love it!
 					</p>
 				</div>
 			</div>
