--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 				Diogo <span class="text-secondary">Barbosa</span>
 			</h1>
 			<h2 class="sm-heading">
-				Software Developer & Computer Scientist
+				Software Developer & Computer Scientist <br/>
+				NEW! <a href="https://dbarbosapn.github.io/Recommendation%20Letter.pdf">Recommendation Letter</a>
 			</h2>
 			<div class="social-icons">
 				<a href="https://www.facebook.com/dbarbosap">
