--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			</h1>
 			<h2 class="sm-heading">
 				Software Developer & Computer Scientist <br/>
-				NEW! <a href="https://dbarbosapn.github.io/Recommendation%20Letter.pdf">Recommendation Letter</a>
+				NEW! <a style="color: #4285F4;" href="https://dbarbosapn.github.io/Recommendation%20Letter.pdf">Recommendation Letter</a>
 			</h2>
 			<div class="social-icons">
 				<a href="https://www.facebook.com/dbarbosap">
